# dxplr

./: Cargo.toml  LICENSE-MIT  README.md  appveyor.yml  azure-pipelines.yml
examples/compute/: main.rs
examples/d2d1/hello/: hello.rs  main.rs
examples/d3d11/texture/: main.rs
examples/d3d11/triangle/: main.rs
examples/d3d12/compute/: compute.hlsl  main.rs
examples/d3d12/texture/: main.rs
examples/d3d12/triangle/: main.rs  simple.hlsl
examples/texture/: main.rs
examples/triangle/: main.rs
src/: api.rs  d2d1.rs  d3d.rs  d3d11.rs  d3d11on12.rs  d3d11sdklayers.rs  d3d12.rs  d3d12sdklayers.rs  d3dcompiler.rs  dwrite.rs  dxgi.rs  lib.rs  result.rs  utility.rs
src/d2d1/: d2d1.rs  d2d1_1.rs  d2d1_2.rs  d2d1_3.rs  svg.rs
src/dwrite/: dwrite.rs  dwrite_1.rs  dwrite_2.rs  dwrite_3.rs  mod.rs
src/dxgi/: dxgi.rs  dxgitype.rs  format.rs
tests/: lib.rs
tests/hlsl/: local.hlsl  simple.hlsl  system.hlsl
