[package]
name = "dxplr"
version = "0.0.0"
authors = ["LNSEAB <lnseab@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"

[features]
dxgi1_2 = ["winapi/dxgi1_2"]
dxgi1_3 = ["dxgi1_2", "winapi/dxgi1_3"]
dxgi1_4 = ["dxgi1_3", "winapi/dxgi1_4"]
dxgi1_5 = ["dxgi1_4", "winapi/dxgi1_5"]
dxgi1_6 = ["dxgi1_5", "winapi/dxgi1_6"]
d3dcompiler = ["winapi/d3dcompiler"]

[dependencies]
com_ptr = "0.1.2"
winapi = { version = "0.3.7", features = [
	"impl-default",
	"winbase",
	"winuser",
	"libloaderapi",
	"handleapi",
	"synchapi",
	"d3dcommon",
	"dxgi",
	"dxgidebug",
	"d3d11",
	"d3d12",
	"d3d12sdklayers",
] }
failure = "0.1.5"
