[package]
name = "dxplr"
version = "0.0.4-alpha.0"
authors = ["LNSEAB <lnseab@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust wrapper around D3D12 and DXGI"
keywords = ["windows", "directx", "d3d12", "dxgi"]
readme = "README.md"
repository = "https://github.com/LNSEAB/dxplr"
documentation = "https://docs.rs/dxplr"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
features = ["dxgi1_6", "d3dcompiler"]

[features]
dxgi1_2 = ["winapi/dxgi1_2"]
dxgi1_3 = ["dxgi1_2", "winapi/dxgi1_3"]
dxgi1_4 = ["dxgi1_3", "winapi/dxgi1_4"]
dxgi1_5 = ["dxgi1_4", "winapi/dxgi1_5"]
dxgi1_6 = ["dxgi1_5", "winapi/dxgi1_6"]
d3dcompiler = ["winapi/d3dcompiler"]

[dependencies]
com_ptr = "0.1.2"
winapi = { version = "0.3.8", features = [
	"impl-default",
	"winbase",
	"winuser",
	"libloaderapi",
	"handleapi",
	"synchapi",
	"d3dcommon",
	"dxgi",
	"dxgidebug",
	"d3d12",
	"d3d12sdklayers",
] }
failure = "0.1.5"

[dev-dependencies]
winit = "0.19.3"
image = "0.22.1"

[[example]]
name = "triangle"
required-features = ["dxgi1_4", "d3dcompiler"]

[[example]]
name = "texture"
required-features = ["dxgi1_4", "d3dcompiler"]

[[example]]
name = "compute"
required-features = ["d3dcompiler"]
