[package]
name = "dxplr"
version = "0.0.14-alpha.0"
authors = ["LNSEAB <lnseab@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Rust wrapper around D3D11, D3D12, DXGI, D2D and DWrite"
keywords = ["windows", "directx", "d3d11", "d3d12", "dxgi", "d2d", "dwrite"]
readme = "README.md"
repository = "https://github.com/LNSEAB/dxplr"
documentation = "https://docs.rs/dxplr"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
features = ["dxgi1_6", "d3dcompiler"]

[features]
d3d11 = ["dxgi", "winapi/d3d11", "winapi/d3dcommon"]
d3d11_1 = ["d3d11", "winapi/d3d11_1"]
d3d11_2 = ["d3d11_1", "winapi/d3d11_2"]
d3d11_3 = ["d3d11_2", "winapi/d3d11_3"]
d3d11_4 = ["d3d11_3", "winapi/d3d11_4"]
d3d11sdklayers = ["winapi/d3d11sdklayers"]
d3d12 = ["dxgi", "winapi/d3d12", "winapi/d3dcommon"]
d3d12sdklayers = ["winapi/d3d12sdklayers"]
dxgi = ["winapi/dxgi"]
dxgi1_2 = ["dxgi", "winapi/dxgi1_2"]
dxgi1_3 = ["dxgi1_2", "winapi/dxgi1_3"]
dxgi1_4 = ["dxgi1_3", "winapi/dxgi1_4"]
dxgi1_5 = ["dxgi1_4", "winapi/dxgi1_5"]
dxgi1_6 = ["dxgi1_5", "winapi/dxgi1_6"]
dxgidebug = ["winapi/dxgidebug"]
d3dcompiler = ["winapi/d3dcompiler", "winapi/stringapiset"]
d3d11on12 = ["d3d11", "d3d12", "winapi/d3d11on12"]
d2d1 = ["winapi/d2d1", "winapi/d2d1effects", "winapi/dcommon", "winapi/d2d1svg"]
d2d1_1 = ["d2d1", "winapi/d2d1_1"]
d2d1_2 = ["d2d1_1", "winapi/d2d1_2", "winapi/d2d1effects_1"]
d2d1_3 = ["d2d1_2", "winapi/d2d1_3", "winapi/d2d1effects_2"]
dwrite = ["winapi/dwrite"]
dwrite_1 = ["dwrite", "winapi/dwrite_1"]
dwrite_2 = ["dwrite_1", "winapi/dwrite_2"]
dwrite_3 = ["dwrite_2", "winapi/dwrite_3"]

[dependencies]
com_ptr = "0.1.3"
winapi = { version = "0.3.8", features = [
	"impl-default",
	"winbase",
	"winuser",
	"libloaderapi",
	"handleapi",
	"synchapi",
] }
failure = "0.1.6"

[dev-dependencies]
winit = "0.21.0"
image = "0.23.0"

[[example]]
name = "d3d11_triangle"
path = "./examples/d3d11/triangle/main.rs"
required-features = ["d3d11", "dxgi", "d3dcompiler"]

[[example]]
name = "d3d11_texture"
path = "./examples/d3d11/texture/main.rs"
required-features = ["d3d11", "dxgi1_2", "d3dcompiler"]

[[example]]
name = "d3d12_triangle"
path = "./examples/d3d12/triangle/main.rs"
required-features = ["d3d12", "d3d12sdklayers", "dxgi1_4", "d3dcompiler"]

[[example]]
name = "d3d12_texture"
path = "./examples/d3d12/texture/main.rs"
required-features = ["d3d12", "d3d12sdklayers", "dxgi1_4", "d3dcompiler"]

[[example]]
name = "d3d12_compute"
path = "./examples/d3d12/compute/main.rs"
required-features = ["d3d12", "d3d12sdklayers", "dxgi1_4", "d3dcompiler"]

[[example]]
name = "d2d1_hello"
path = "./examples/d2d1/hello/hello.rs"
required-features = ["d2d1", "dwrite"]
